--- a/view/user/listUser.html
+++ b/view/user/listUser.html
@@ -95,7 +95,7 @@
                     Não <i class="glyphicon glyphicon-remove"></i>
                 </button>
 
-                <button ng-click="del(pessoa.sq_pessoa)" class="btn btn-danger btn-sm" data-dismiss="modal">
+                <button ng-click="delUser(pessoa.sq_pessoa)" class="btn btn-danger btn-sm" data-dismiss="modal">
                     Sim <i class="glyphicon glyphicon-ok"></i>
                 </button>
             </div>
