--- a/view/user/upUser.html
+++ b/view/user/upUser.html
@@ -84,11 +84,11 @@
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
 
-                <button type="submit" class="btn btn-primary btn-sm" ng-click="updateDataUser()" ng-Disabled="formPessoal.$invalid">Salvar
+                <button type="submit" class="btn btn-primary btn-sm" ng-click="upUser()" ng-Disabled="formPessoal.$invalid">Salvar
                     <i class="glyphicon glyphicon-save"></i>
                 </button>
 
-                <a class="btn btn-default btn-sm" href="#/user">Voltar
+                <a class="btn btn-default btn-sm" href="#/user/listUser">Voltar
                     <i class="glyphicon glyphicon-remove"></i>
                 </a>
 
