--- a/view/user/addUser.html
+++ b/view/user/addUser.html
@@ -148,7 +148,7 @@
                 <i class="glyphicon glyphicon-save"></i>
             </button>
 
-            <a class="btn btn-default btn-sm" href="#/user">Cancelar
+            <a class="btn btn-default btn-sm" href="#/user/listUser">Cancelar
                 <i class="glyphicon glyphicon-remove"></i>
             </a>
 
