--- a/view/customer/upCustomer.html
+++ b/view/customer/upCustomer.html
@@ -47,8 +47,8 @@
             <div role="tabpanel" class="tab-pane active" id="pessoal">
 
                 <!--Apresentação-->
-                <h1><span class="text-primary hidden-xs" ng-bind="user.ds_nome"></span></h1>
-                <h2><span class="text-primary hidden-sm hidden-md hidden-lg" ng-bind="user.ds_nome"></span></h2>
+                <h1><span class="text-primary hidden-xs" ng-bind="user.ds_name"></span></h1>
+                <h2><span class="text-primary hidden-sm hidden-md hidden-lg" ng-bind="user.ds_name"></span></h2>
 
                 <form name="formPessoal" class="form-horizontal" ng-show="user != null">
 
@@ -63,19 +63,19 @@
                         <div class="col-xs-12 col-sm-6 col-md-6">
                             <input class="form-control"
                                    placeholder="Nome e sobrenome"
-                                   name="ds_nome"
+                                   name="ds_name"
                                    type="text"
                                    ng-maxlength="50"
                                    maxlength="50"
-                                   ng-model="user.ds_nome"
+                                   ng-model="user.ds_name"
                                    required/>
                         </div>
 
                         <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
-                            <span class="text-danger" ng-show="formPessoal.ds_nome.$dirty && formPessoal.ds_nome.$invalid">
+                            <span class="text-danger" ng-show="formPessoal.ds_name.$dirty && formPessoal.ds_name.$invalid">
                                 <i class="glyphicon glyphicon-remove-sign"></i>
-                                <span ng-show="formPessoal.ds_nome.$error.required">Campo obrigatório</span>
-                                <span ng-show="formPessoal.ds_nome.$error.maxlength">Máximo de cinquenta caracteres</span>
+                                <span ng-show="formPessoal.ds_name.$error.required">Campo obrigatório</span>
+                                <span ng-show="formPessoal.ds_name.$error.maxlength">Máximo de cinquenta caracteres</span>
                             </span>
 
                         </div>
@@ -134,8 +134,8 @@
             <div role="tabpanel" class="tab-pane" id="acesso">
 
                 <!--Apresentação-->
-                <h1><span class="text-primary hidden-xs" ng-bind="user.ds_nome"></span></h1>
-                <h2><span class="text-primary hidden-sm hidden-md hidden-lg" ng-bind="user.ds_nome"></span></h2>
+                <h1><span class="text-primary hidden-xs" ng-bind="user.ds_name"></span></h1>
+                <h2><span class="text-primary hidden-sm hidden-md hidden-lg" ng-bind="user.ds_name"></span></h2>
 
                 <form name="formAcesso" class="form-horizontal" ng-show="user != null">
 
@@ -152,22 +152,22 @@
 
                             <input class="form-control"
                                    placeholder="Senha"
-                                   name="ds_senha"
+                                   name="ds_password"
                                    type="password"
                                    maxlength="20"
                                    ng-maxlength="20"
                                    ng-minlength="4"
-                                   ng-model="user.ds_senha"
+                                   ng-model="user.ds_password"
                                    required/>
                         </div>
 
                         <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
 
-                            <span class="text-danger" ng-show="formAcesso.ds_senha.$dirty && formAcesso.ds_senha.$invalid">
+                            <span class="text-danger" ng-show="formAcesso.ds_password.$dirty && formAcesso.ds_password.$invalid">
                                 <i class="glyphicon glyphicon-remove-sign"></i>
-                                <span ng-show="formAcesso.ds_senha.$error.required">Campo obrigatório</span>
-                                <span ng-show="formAcesso.ds_senha.$error.minlength">Mínimo de quatro caracteres</span>
-                                <span ng-show="formAcesso.ds_senha.$error.maxlength">Máximo de vinte caracteres</span>
+                                <span ng-show="formAcesso.ds_password.$error.required">Campo obrigatório</span>
+                                <span ng-show="formAcesso.ds_password.$error.minlength">Mínimo de quatro caracteres</span>
+                                <span ng-show="formAcesso.ds_password.$error.maxlength">Máximo de vinte caracteres</span>
                             </span>
 
                         </div>
@@ -183,10 +183,10 @@
 
                             <input class="form-control"
                                    placeholder="Repita a senha"
-                                   name="re_senha"
+                                   name="re_password"
                                    type="password"
                                    maxlength="20"
-                                   ng-model="user.re_senha"
+                                   ng-model="user.re_password"
                                    ng-maxlength="20"
                                    ng-minlength="4"
                                    required/>
@@ -194,11 +194,11 @@
 
                         <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
 
-                            <span class="text-danger" ng-show="formAcesso.re_senha.$dirty && formAcesso.re_senha.$invalid">
+                            <span class="text-danger" ng-show="formAcesso.re_password.$dirty && formAcesso.re_password.$invalid">
                                 <i class="glyphicon glyphicon-remove-sign"></i>
-                                <span ng-show="formAcesso.re_senha.$error.required">Campo obrigatório</span>
-                                <span ng-show="formAcesso.re_senha.$error.minlength">Mínimo de quatro caracteres</span>
-                                <span ng-show="formAcesso.re_senha.$error.maxlength">Máximo de vinte caracteres</span>
+                                <span ng-show="formAcesso.re_password.$error.required">Campo obrigatório</span>
+                                <span ng-show="formAcesso.re_password.$error.minlength">Mínimo de quatro caracteres</span>
+                                <span ng-show="formAcesso.re_password.$error.maxlength">Máximo de vinte caracteres</span>
                             </span>
 
                         </div>
