--- a/view/user/upUser.html
+++ b/view/user/upUser.html
@@ -1,16 +1,16 @@
-<legend ng-show="row.sq_pessoa != null">Edição de usuário</legend>
+<legend ng-show="row.sq_person != null">Edição de usuário</legend>
 
 <div ng-init="getUser()">
 
     <!--Apresentação-->
-    <h1><span class="text-primary hidden-xs" ng-bind="row.ds_nome"></span></h1>
-    <h2><span class="text-primary hidden-sm hidden-md hidden-lg" ng-bind="row.ds_nome"></span></h2>
+    <h1><span class="text-primary hidden-xs" ng-bind="row.ds_name"></span></h1>
+    <h2><span class="text-primary hidden-sm hidden-md hidden-lg" ng-bind="row.ds_name"></span></h2>
 
     <form name="formPessoal" class="form-horizontal" ng-show="row != null">
 
-        <!--sq_pessoa hidden-->
-        <input name="sq_pessoa" type="hidden" ng-model="row.sq_pessoa" />
-        <!--sq_pessoa hidden-->
+        <!--sq_person hidden-->
+        <input name="sq_person" type="hidden" ng-model="row.sq_person" />
+        <!--sq_person hidden-->
 
         <!--campo nome-->
         <div class="form-group">
@@ -19,19 +19,19 @@
             <div class="col-xs-12 col-sm-6 col-md-6">
                 <input class="form-control"
                        placeholder="Nome e sobrenome"
-                       name="ds_nome"
+                       name="ds_name"
                        type="text"
                        ng-maxlength="50"
                        maxlength="50"
-                       ng-model="row.ds_nome"
+                       ng-model="row.ds_name"
                        required/>
             </div>
 
             <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
-                <span class="text-danger" ng-show="formPessoal.ds_nome.$dirty && formPessoal.ds_nome.$invalid">
+                <span class="text-danger" ng-show="formPessoal.ds_name.$dirty && formPessoal.ds_name.$invalid">
                     <i class="glyphicon glyphicon-remove-sign"></i>
-                    <span ng-show="formPessoal.ds_nome.$error.required">Campo obrigatório</span>
-                    <span ng-show="formPessoal.ds_nome.$error.maxlength">Máximo de cinquenta caracteres</span>
+                    <span ng-show="formPessoal.ds_name.$error.required">Campo obrigatório</span>
+                    <span ng-show="formPessoal.ds_name.$error.maxlength">Máximo de cinquenta caracteres</span>
                 </span>
 
             </div>
