[UP] Change MER.

--- a/view/customer/addCustomer.html
+++ b/view/customer/addCustomer.html
@@ -1,12 +1,12 @@
 <legend>Cadastro de cliente</legend>
 
-<!--Apresentação-->
+<!--presentation-->
 <h1><span class="text-primary hidden-xs" ng-bind="row.ds_name"></span></h1>
 <h2><span class="text-primary hidden-sm hidden-md hidden-lg" ng-bind="row.ds_name"></span></h2>
 
 <form name="form" class="form-horizontal">
 
-    <!--campo nome-->
+    <!--field name-->
     <div class="form-group">
         <label class="col-sm-2 control-label">Nome</label>
 
@@ -30,9 +30,9 @@
 
         </div>
     </div>
-    <!--campo nome-->
+    <!--field name-->
 
-    <!--campo email-->
+    <!--field email-->
     <div class="form-group">
         <label class="col-sm-2 control-label">E-mail</label>
 
@@ -58,9 +58,9 @@
 
         </div>
     </div>
-    <!--campo email-->
+    <!--field email-->
 
-    <!--campo senha-->
+    <!--field password-->
     <div class="form-group">
         <label class="col-sm-2 control-label">Senha</label>
 
@@ -88,9 +88,9 @@
 
         </div>
     </div>
-    <!--campo senha-->
+    <!--field password-->
 
-    <!--campo confirma senha-->
+    <!--field re password-->
     <div class="form-group">
         <label class="col-sm-2 control-label">Repita a senha</label>
 
@@ -119,9 +119,9 @@
 
         </div>
     </div>
-    <!--campo confirma senha-->
+    <!--field re password-->
 
-    <!--botões-->
+    <!--buttons-->
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
 
